[package]
name = "libspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.chrono]
version = "0.4"

[dependencies.dirs]
version = "4.0.0"

[dependencies.log]
version = "0.4"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.sgp4]
version = "^0.5"

[dependencies.ureq]
version = "2.4.0"
features = ["default","json"]