[package]
name = "libspace"
version = "0.1.0"
edition = "2021"
authors = ["Malte Kießling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.chrono]
version = "0.4"

[dependencies.dirs]
version = "4.0.0"

[dependencies.glam]
version = "0.23.0"
features = ["default", "serde"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.log]
version = "0.4"

[dependencies.num]
version = "0.4.0"

[dependencies.rust-spice]
version = "0.7.5"
features = ["lock"]

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.sgp4]
version = "0.9.1"

[dependencies.ureq]
version = "2.4.0"
features = ["default","json"]

[build-dependencies]
cc = "1.0.72"
sha2 = "0.10.1"
ureq = "2.4.0"
tar = "0.4.38"
zip = "0.6.4"
