[package]
name = "satwatch"
version = "0.1.0"
edition = "2021"
authors = ["Malte Kießling"]

[features]
default = []
trace_logging = ["log/max_level_trace", "log/release_max_level_trace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.chrono]
version = "0.4"

[dependencies.dirs]
version = "4.0.0"

[dependencies.glam]
version = "0.20.2"
features = ["default", "serde"]

[dependencies.imgui]
git = "https://github.com/imgui-rs/imgui-rs"
branch = "main"

[dependencies.imgui-sys]
git = "https://github.com/imgui-rs/imgui-rs"
branch = "main"

[dependencies.imgui-glow-renderer]
git = "https://github.com/imgui-rs/imgui-rs"
branch = "main"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.legion]
version = "0.4.0"

[dependencies.log]
version = "0.4"

[dependencies.libspace]
path = "../libspace"

[dependencies.glow]
version = "0.10.0"

[dependencies.sdl2]
version = "^0.35"
features = ["default", "image"]

[dependencies.serde]
version = "1"

[dependencies.toml]
version = "0.5.8"


