[package]
name = "satwatch"
version = "0.1.0"
edition = "2021"
authors = ["Malte Kießling"]

[features]
default = []
trace_logging = ["log/max_level_trace", "log/release_max_level_trace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.chrono]
version = "0.4"

[dependencies.curl]
version = "0.4.42"

[dependencies.dirs]
version = "4.0.0"

[dependencies.glam]
version = "0.23.0"
features = ["default", "serde"]

[dependencies.imgui]
version = "0.11.0"
features = ["docking"]

[dependencies.imgui-sys]
version = "0.11.0"

[dependencies.imgui-glow-renderer]
version = "0.11.0"

[dependencies.imgui-sdl2-support]
version = "0.11.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.legion]
version = "0.4.0"

[dependencies.log]
version = "0.4"

[dependencies.libspace]
path = "../libspace"

[dependencies.glow]
version = "0.12.0"

[dependencies.sdl2]
version = "0.34.5"
features = ["default", "image"]

[dependencies.serde]
version = "1"

[dependencies.toml]
version = "0.7.2"


